@@ -23,10 +23,6 @@ mkdir log
 shout "Preparing to install SystemD Radix Node"
 shout "This script should only be executed on a clean build"
 
-read -r -p "Do you want to create a new validator node key (y/n)? " babylonMigrationSetup
-while [ !("$babylonMigrationSetup" == y || "$babylonMigrationSetup" == n)]; do
-    read -r -p "Do you want to create a new validator node key (y/n)? " babylonMigrationSetup
-done
 
 # 1. Install dependencies 
 shout  "Installing dependencies and initiate randomness to securely generate keys"
@@ -77,43 +73,55 @@ try sudo chown -R radixdlt:radixdlt /opt/radixdlt
 
 # 5. Create System D Service File
 shout "Installing Sytem D service"
-sudo curl -Lo /etc/systemd/system/radixdlt-node.service https://raw.githubusercontent.com/fpieper/fpstaking/main/docs/config/radixdlt-node.service
-shout "Enable node service at boot"
+try sudo curl -Lo /etc/systemd/system/radixdlt-node.service https://raw.githubusercontent.com/RadixLogicalMoon/RadixNodeSetup/main/BuildSystemDNode/config/babylon/SystemD/radixdlt-node.service
+sudo chown radixdlt:radixdlt /etc/systemd/system/radixdlt-node.service
+
+# 10  Enable Your Node at Startup
+shout "Enabling node service at boot"
 sudo systemctl enable radixdlt-node.service
 
-
-# 6. Add radixdlt to path
+# 5.1 Add radixdlt to path
 shout "Adding radixdlt to path" 
 sudo sh -c 'cat > /etc/profile.d/radixdlt.sh << EOF
 PATH=$PATH:/opt/radixdlt
 EOF'
 
-# 7. Install the Radix Distribution (Node)
-shout "Installing the Radix Distribution (Node)"
+# 6. Download & Install the Radix Distribution (Node)
+shout "Download & Installing the Radix Distribution (Node)"
 cd /home/radixdlt
 #sudo -u radixdlt curl -Lo /opt/radixdlt/update-node https://gist.githubusercontent.com/katansapdevelop/d12f931f35faa35dbbe20d6793149e8b/raw/0927c1a68a5a83b5c368256443bcfe233e883869/update-node && chmod +x /opt/radixdlt/update-node
 #sudo -u radixdlt /opt/radixdlt/./update-node
 
 #Download the latest release from the CLI
-export PLATFORM_NAME=arch-linux-x86_64
-export VERSION=rcnet-v3.1-r5
-wget https://github.com/radixdlt/babylon-node/releases/download/${VERSION}/babylon-node-${VERSION}.zip
-wget https://github.com/radixdlt/babylon-node/releases/download/${VERSION}/babylon-node-rust-${PLATFORM_NAME}-release-${VERSION}.zip
-unzip babylon-node-${VERSION}.zip
-unzip babylon-node-rust-${PLATFORM_NAME}-release-${VERSION}.zip
-mkdir -p /etc/radixdlt/node/
-mv core-${VERSION} /etc/radixdlt/node/${VERSION}
-# Move the java application into the systemd service directory
-mkdir -p /etc/radixdlt/node/
-mv core-${VERSION} /etc/radixdlt/node/${VERSION}
+sudo -u radixdlt export PLATFORM_NAME=arch-linux-x86_64
+sudo -u radixdlt export VERSION=v1.0.0
+sudo -u radixdlt wget https://github.com/radixdlt/babylon-node/releases/download/${VERSION}/babylon-node-${VERSION}.zip
+sudo -u radixdlt wget https://github.com/radixdlt/babylon-node/releases/download/${VERSION}/babylon-node-rust-${PLATFORM_NAME}-release-${VERSION}.zip
+sudo -u radixdlt unzip babylon-node-${VERSION}.zip
+sudo -u radixdlt unzip babylon-node-rust-${PLATFORM_NAME}-release-${VERSION}.zip
 
 
-# 8. Create Secrets Directories
+sudo -u radixdlt mkdir -p /etc/radixdlt/node/
+sudo -u radixdlt mv core-${VERSION} /etc/radixdlt/node/${VERSION}
+# 6.4 Move the java application into the systemd service directory
+sudo -u radixdlt mkdir -p /etc/radixdlt/node/
+sudo -u radixdlt mv core-${VERSION} /etc/radixdlt/node/${VERSION}
+
+# 6.5 Move the library into your Java Class Path
+export LIBRARY_FILENAME=libcorerust.so
+sudo -u radixdlt unzip babylon-node-rust-${PLATFORM_NAME}-release-${VERSION}.zip
+sudo -u radixdlt sudo mkdir -p /usr/lib/jni
+sudo -u radixdlt sudo mv ${LIBRARY_FILENAME} /usr/lib/jni/${LIBRARY_FILENAME}
+
+
+# 7. Create Keys Secrets Directories
+#  7.1 Create Directories
 shout "Creating Secret Directories"
 cd /etc/radixdlt/node
 sudo -u radixdlt mkdir /etc/radixdlt/node/secrets-validator
 sudo -u radixdlt mkdir /etc/radixdlt/node/secrets-fullnode
 
+#  7.2 Create Keys
 read -r -p "Do you want to create a new full node key (y/n)? " createFullNodeKey
 if [ "$createFullNodeKey" = "y" ]; then
   read -r -p "Enter Full Node Key Password: " fullNodeKeyPassword
@@ -129,19 +137,16 @@ fi
 
 read -r -p "Copy the secret keys to the Node or you've created new ones. Is it done yet (y/n)? " keysCopied
 while [ "$keysCopied" != y ]; do
-             read -r -p "Copy the secret keys to the Node or you've created new ones. Is it done yet (y/n)? " keysCopied
+    read -r -p "Copy the secret keys to the Node or you've created new ones. Is it done yet (y/n)? " keysCopied
 done
 sudo -u radixdlt chown -R radixdlt:radixdlt /etc/radixdlt/node/secrets-validator/
 sudo -u radixdlt chown -R radixdlt:radixdlt /etc/radixdlt/node/secrets-fullnode/
 cd /etc/radixdlt/node
 
-# 9. Set environment file
+# 7.2. Set environment file
 read -r -p "Enter validator key password? " validatorKeyPassword
 
 NODE_JAVA_OPTS=JAVA_OPTS="--enable-preview -server -Xms12g -Xmx12g  -XX:MaxDirectMemorySize=2048m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseCompressedOops -Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts -Djavax.net.ssl.trustStoreType=jks -Djava.security.egd=file:/dev/urandom -DLog4jContextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector"
-if [ "$babylonMigrationSetup" == "y" ]; then
-    NODE_JAVA_OPTS="--enable-preview -server -Xms12g -Xmx12g  -XX:MaxDirectMemorySize=2048m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseCompressedOops -Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts -Djavax.net.ssl.trustStoreType=jks -Djava.security.egd=file:/dev/urandom -DLog4jContextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector"
-fi
 sudo -u radixdlt cat > /etc/radixdlt/node/secrets-validator/environment << EOF
 JAVA_OPTS=$NODE_JAVA_OPTS
 RADIX_NODE_KEYSTORE_PASSWORD=$validatorKeyPassword
@@ -154,21 +159,21 @@ RADIX_NODE_KEYSTORE_PASSWORD=$fullNodeKeyPassword
 EOF
 
 
-# 10. Restrict access to secrets
+# 7.3. Restrict access to secrets (Not in standard docs)
 echo "Restrict access to secrets"
 sudo chown -R radixdlt:radixdlt /etc/radixdlt/node/secrets-validator
 sudo chown -R radixdlt:radixdlt /etc/radixdlt/node/secrets-fullnode
 sudo -u radixdlt chmod 500 /etc/radixdlt/node/secrets-validator && chmod 400 /etc/radixdlt/node/secrets-validator/*
 sudo -u radixdlt chmod 500 /etc/radixdlt/node/secrets-fullnode && chmod 400  /etc/radixdlt/node/secrets-fullnode/*
 
-# 11. Node Configuration
+# 8. Node Configuration
 shout "Download Node Configuration File or you can enter Florians https://raw.githubusercontent.com/fpieper/fpstaking/main/docs/config/default.config"
 read -r -p "Enter the URL to your Config file ? " configFileURL
 sudo -u radixdlt curl -Lo /etc/radixdlt/node/default.config "$configFileURL"
 
 shout "If using florian's script make sure you edit the file using 'sudo nano /etc/radixdlt/node/default.config' and update your host_ip address at a minimum" 
 
-# 12. Install Switch Script 
+# 9. Install Switch Script 
 shout "Installing the switch script"
 sudo -u radixdlt curl -Lo /opt/radixdlt/switch-mode.sh https://raw.githubusercontent.com/fpieper/fpstaking/main/docs/scripts/switch-mode && chmod +x /opt/radixdlt/switch-mode.sh
 shout "If using NGINX this script needs to be updated to change the port from 3333 to 3334"
@@ -177,7 +182,7 @@ shout "Run 'sudo su - radixdlt' to switch to the radixdlt user"
 shout "Run '. /opt/radixdlt/switch-mode.sh fullnode' to start the node as a full node"
 shout "Run 'curl -s localhost:3333/system/health | jq' to check the node status"
 
-# 13. Install Grafana SystemD Service
+# 10. Install Grafana SystemD Service
 read -r -p "Install Grafana (y/n)? " installGrafana
 if [ "$installGrafana" = "y" ]; then
   echo "Follow the steps from Florian's guide to setup Grafana 'https://github.com/fpieper/fpstaking/blob/main/docs/validator_guide.md#monitoring-with-grafana-cloud'"
